<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Offers</string>
    <string name="app_info">Daily Offers App info</string>
    <string name="product_image">Product image</string>
    <string name="view_details">View details</string>
    <string name="buy">Buy</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="search_hint">Search products</string>
    <string name="edit_categories">Visible categories</string>
    <string name="hidden_category">This category will be hidden from the products list</string>
    <string name="visible_category">This category will be shown in the products list</string>
    <string name="affect_search">Only products from checked categories will be shown in search results</string>
    <string name="no_affect_search">Products from all categories will be shown in search results</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="favorites">My Favorites</string>
    <string name="search_results">Results for</string>
    <string name="no_visible_categories_explanation">There are no visible categories. You can set them in Settings.</string>
    <string name="visible_categories_affect_search">Filter affects search scope</string>
    <string name="before">Before</string>
    <string name="offer_price">Offer price</string>
    <string name="regular_price">Regular price</string>
    <string name="category">Category</string>
    <string name="favorited_product_added_confirm">%1$s has been added to Favorites</string>
    <string name="favorited_product_removed_confirm">%1$s has been removed from Favorites</string>
    <string name="basic_data">Basic data:</string>
</resources>
