<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/edit_categories">

            <CheckBoxPreference
                    android:key="visibility_affects_search"
                    android:title="@string/visible_categories_affect_search"
                    android:summaryOff="@string/no_affect_search"
                    android:summaryOn="@string/affect_search"
                    android:defaultValue="true" />

            <CheckBoxPreference
                    android:key="wines_visible"
                    android:title="Wines"
                    android:summaryOff="@string/hidden_category"
                    android:summaryOn="@string/visible_category"
                    android:defaultValue="true" />
            <CheckBoxPreference
                    android:key="spirits_visible"
                    android:title="Spirits"
                    android:summaryOff="@string/hidden_category"
                    android:summaryOn="@string/visible_category"
                    android:defaultValue="true" />
            <CheckBoxPreference
                    android:key="beers_visible"
                    android:title="Beers"
                    android:summaryOff="@string/hidden_category"
                    android:summaryOn="@string/visible_category"
                    android:defaultValue="true" />
        </PreferenceCategory>

</PreferenceScreen>
