<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/mi_search"
            android:icon="@drawable/abs__ic_search_api_holo_light"
            android:title="@string/search"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="me.javierferrer.dailyoffersapp.widgets.ProductsSearchView"
            />
    <item
            android:id="@+id/mi_more"
            android:icon="@drawable/abs__ic_menu_moreoverflow_holo_light"
            android:title="@string/more"
            android:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/mi_bookmarks_list"
                    android:title="@string/bookmarks"
                    android:showAsAction="always"
                    />
            <item
                    android:id="@+id/mi_settings"
                    android:title="@string/settings"
                    android:showAsAction="always"
                    />
        </menu>
    </item>
</menu>
