<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10px"
                android:paddingTop="10px" >

    <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/abs__ic_cab_done_holo_light"
            android:contentDescription="@string/product_image" />

    <TextView
            android:id="@+id/tv_product_offer_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_product_image"
            android:textSize="25dp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_product_image"
            android:layout_below="@id/tv_product_offer_price"
            android:textSize="20dp" />

    <!-- focusable para no "robar" el foco del elemento de la lista-->
    <CheckBox
            android:id="@+id/cb_favorited_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5px"
            android:paddingRight="10px"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/add_favorite"
            android:focusable="false"
            style="?android:attr/starStyle" />

    <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:id="@+id/btn_buy"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_product_image"/>

</RelativeLayout>
